@@ -1,7 +1,9 @@
+
 2001-12-03  Alasdair Allan <aa@astro.ex.ac.uk>
 
         * Query/Query.pm: Added conditional test to see if $base_url is
-          defined before setting it in the method.
+          defined before setting it in the method. Bug fix; added URL,
+          Timeout and Proxy to list of functions called by constructor.
           
 2001-11-28 Alasdair Allan <aa@astro.ex.ac.uk>
 
